# bootcamp

./: .gitignore  README.md
1. Beginner/1. Get Up And Running FAST!/comments/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/constants_and_statics/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/control_flow/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/data_types/: Cargo.toml
1. Beginner/1. Get Up And Running FAST!/variables/: Cargo.toml
1. Beginner/2. How Rust Achieves Memory Safety/ownership/: Cargo.toml
1. Beginner/2. How Rust Achieves Memory Safety/ownership_continued/: Cargo.toml
1. Beginner/2. How Rust Achieves Memory Safety/slices/: Cargo.toml
1. Beginner/3. Building Your Own Data Types/enums_and_matching/: Cargo.toml
1. Beginner/3. Building Your Own Data Types/option_and_result/: Cargo.toml
1. Beginner/3. Building Your Own Data Types/structs_and_impl_blocks/: Cargo.toml
1. Beginner/3. Building Your Own Data Types/tuple_structs/: Cargo.toml
1. Beginner/3. Building Your Own Data Types/vectors/: Cargo.toml
1. Beginner/4. How To Structure Your Rust Projects/auth_service/: Cargo.toml
1. Beginner/4. How To Structure Your Rust Projects/my_package/: Cargo.toml
1. Beginner/5. Structuring Larger Projects/blog/: Cargo.toml
1. Beginner/5. Structuring Larger Projects/draw/: Cargo.toml
1. Beginner/5. Structuring Larger Projects/draw/src/: lib.rs
1. Beginner/6. How To Test & Document Your Code/bank/: Cargo.toml
1. Beginner/6. How To Test & Document Your Code/benchmark_tests/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/deriving_traits/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/generics/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/orphan_rule/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/supertraits/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/trait_objects/: Cargo.toml
2. Intermediate/1. Polymorphism With Generics & Traits/traits_and_trait_bounds/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/box_smart_pointer/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/concrete_lifetimes/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/deref_coercion/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/generic_lifetimes/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/rc_smart_pointer/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/refcell_smart_pointer/: Cargo.toml
2. Intermediate/2. Advanced Memory Management/structs_and_lifetime_elision/: Cargo.toml
3. Advanced/2. Rust's Powerful Macro System/procedural_macros/: Cargo.toml
3. Advanced/2. Rust's Powerful Macro System/procedural_macros/src/: lib.rs  main.rs
3. Advanced/3. Unsafe Rust And FFI/rust_from_python/: Cargo.toml  pyproject.toml
3. Advanced/3. Unsafe Rust And FFI/rust_from_python/src/: lib.rs
4. Projects/1. CLI/Problem/Stage 2/Step 2/: Cargo.toml
4. Projects/1. CLI/Problem/Stage 2/Step 2/data/: db.json
4. Projects/1. CLI/Problem/Stage 2/Step 2/src/: db.rs  io_utils.rs  main.rs
4. Projects/1. CLI/Problem/Stage 2/Step 2/src/ui/: mod.rs  prompts.rs
4. Projects/1. CLI/Problem/Stage 2/Step 2/src/ui/pages/: mod.rs
4. Projects/2. API-axum/Problem/Stage 3/Step 2/: Cargo.toml
4. Projects/2. API-axum/Problem/Stage 3/Step 2/migrations/: 20221203231817_setup.up.sql
4. Projects/2. API-axum/Problem/Stage 3/Step 2/src/: main.rs  models.rs
4. Projects/2. API-axum/Problem/Stage 3/Step 2/src/handlers/: mod.rs
4. Projects/2. API/Problem/Stage 2/Step 1/: Cargo.toml
4. Projects/2. API/Problem/Stage 2/Step 1/src/: main.rs
4. Projects/3. Microservices/Solution/: Cargo.toml
(+226 files in other folders)
