[package]
name = "procedural_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version ="1.0", features = ["full"] }
chrono = "0.4"
darling = "0.13"