[package]
name = "stackoverflow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version="0.5.0-rc.2", features=["json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "uuid"] }
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.4"